

set(PRODUCT_SRC_LIST ../config.cpp ../log.cpp ../procmon.cpp plot.cpp month_report.cpp month_report_main.cpp)
add_executable(month_report ${PRODUCT_SRC_LIST})

set(main_name month_report)

target_link_libraries(${main_name} muduo_net_cpp11)
target_link_libraries(${main_name} muduo_base_cpp11)
target_link_libraries(${main_name} muduo_http)
target_link_libraries(${main_name} boost_system)
target_link_libraries(${main_name} ssl)
target_link_libraries(${main_name} mysqlcppconn)
target_link_libraries(${main_name} boost_program_options) 
target_link_libraries(${main_name} boost_filesystem) 
target_link_libraries(${main_name} boost_coroutine) 
target_link_libraries(${main_name} boost_thread) 
target_link_libraries(${main_name} pthread) 
target_link_libraries(${main_name} boost_context) 
target_link_libraries(${main_name} boost_date_time) 
target_link_libraries(${main_name} crypto) 
target_link_libraries(${main_name} boost_regex) 
target_link_libraries(${main_name} boost_timer) 
target_link_libraries(${main_name} boost_signals) 
target_link_libraries(${main_name} boost_locale)

target_link_libraries(${main_name} muduo_inspect)
target_link_libraries(${main_name} gd)
set_target_properties(${main_name} PROPERTIES COMPILE_FLAGS "-std=c++14")
add_definitions(-DMING_DEBUG)
if(TCMALLOC_INCLUDE_DIR AND TCMALLOC_LIBRARY)
  set_target_properties(${main_name} PROPERTIES COMPILE_FLAGS "-DHAVE_TCMALLOC")
  target_link_libraries(${main_name} tcmalloc_and_profiler)
endif()